@@ -1,5 +1,6 @@
 h2. 0.2.1
 
+* support to fill_in float, fixnum into textfield
 * fill_in select with just a number
 * see selected number within select_tag
 * checking order on page - can handle duplicates in both sides ( definition and page )
